k8s-manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-eks-application-svc
  labels:
    app: aws-eks-application
spec:
  selector:
    app: aws-eks-application
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 4000
